Scrollbar and tree view fixes

--- a/styles/atom.less
+++ b/styles/atom.less
@@ -5,33 +5,31 @@ atom-workspace {
   border-top: 1px solid rgba(0, 0, 0, .4);
 }
 
-.scrollbars-visible-always {
-  /deep/ ::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 5px;
-    height: 5px;
+::-webkit-scrollbar {
+  // -webkit-appearance: none;
+  width: 10px;
+  height: 10px;
+  background: @scrollbar-background-color;
+  //
+  // &:hover {
+  //   width: 13px;
+  //   height: 13px;
+  // }
+}
 
-    &:hover {
-      width: 13px;
-      height: 13px;
-    }
-  }
+::-webkit-scrollbar-track,
+::-webkit-scrollbar-corner {
+  background: @scrollbar_track_color;
+}
 
-  /deep/ ::-webkit-scrollbar-track,
-  /deep/ ::-webkit-scrollbar-corner {
-    background: @scrollbar-background-color;
-  }
+::-webkit-scrollbar-thumb {
+  background: @scrollbar-color;
+  border: 3px solid @scrollbar-background-color;
+  border-radius: 6.5px;
+  box-shadow: none !important;
 
-  /deep/ ::-webkit-scrollbar-thumb {
-    background: @scrollbar-color;
-    border: 3px solid @scrollbar-background-color;
-    border-radius: 6.5px;
-    box-shadow: none!important;
-    &:hover {
-      background: #828586;
-    }
-    &:active {
-      background: #4b98ea;
-    }
+  &:hover,
+  &:active {
+    background: @scrollbar-color-hover;
   }
 }
