--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -44,6 +44,10 @@ body.file-icons-on-changes .tree-view {
 	}
 }
 
+.tree-view-resizer {
+	padding-right: 5px;
+}
+
 .tree-view-resize-handle {
 	border: 5px solid shade(@tree-view-border-color, 0.84);
 }
